updated theme to latest version

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -69,6 +69,7 @@ mainSections = ["posts"]
   groupByYear = true
   cardView = false
   cardViewScreenWidth = false
+  constrainItemsWidth = true
 
 [sitemap]
   excludedKinds = []
