Fix error: deprecated site config key 'paginate'

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -7,7 +7,6 @@ theme = "blowfish"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
-paginate = 20
 summaryLength = 30
 
 buildDrafts = false
@@ -16,6 +15,9 @@ buildFuture = false
 enableEmoji = true
 
 # googleAnalytics = "G-XXXXXXXXX"
+
+[pagination]
+  pagerSize = 20
 
 [taxonomies]
   tag = "tags"
